--- a/index.html
+++ b/index.html
@@ -1,97 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>System & Flow — Project Management Made Simple</title>
-  <meta content="Simplify project execution with lightweight SaaS tools and AI prompts built by PMs, for PMs. Avoid chaos. Move faster." name="description"/>
-  <link href="styles.css" rel="stylesheet"/>
- </head>
- <body>
+  <meta name="description" content="Simplify project execution with lightweight SaaS tools and AI prompts built by PMs, for PMs." />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
   <header class="site-header">
-   <div class="container">
-    <a aria-label="System & Flow" class="brand" href="/">
-     <img alt="System & Flow Logo" src="assets/img/logo.png"/>
-     <span>System & Flow</span>
-    </a>
-    <nav>
-     <ul class="nav-links">
-      <li><a href="/">Home</a></li>
-      <li><a href="/apps.html">Tools</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-     </ul>
-    </nav>
-   </div>
+    <div class="container">
+      <a href="/" class="brand-wrap" aria-label="System & Flow">
+        <img src="assets/img/logo.png" alt="System & Flow Logo" />
+        <span class="brand">System & Flow</span>
+      </a>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="/">Home</a></li>
+          <li><a href="/apps.html">Tools</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-   <section class="hero">
-    <div class="container">
-     <img alt="System & Flow Logo" class="hero-logo" src="assets/img/logo.png"/>
-     <h1>Project Management.<br/>Simplified.</h1>
-     <p class="tagline">SaaS tools and AI prompts <strong>built by PMs</strong> to eliminate chaos, flag risks early, and speed up execution.</p>
-     <div class="cta-row">
-      <a class="button primary" href="/apps.html">Explore Tools</a>
-      <a class="button ghost" href="/contact.html">Early Access List</a>
-     </div>
+    <section class="hero">
+      <div class="container">
+        <img src="assets/img/logo.png" alt="System & Flow Logo" class="hero-logo" />
+        <h1>Project Management.<br />Simplified.</h1>
+        <p class="tagline">SaaS tools and AI prompts <strong>built by PMs</strong> to eliminate chaos, flag risks early, and speed up execution.</p>
+        <div class="cta-row">
+          <a class="button primary" href="/apps.html">Explore Tools</a>
+          <a class="button ghost" href="/contact.html">Early Access List</a>
+        </div>
 
-     <form class="newsletter-form" method="POST">
-      <input type="email" placeholder="Get product launches + PM tips" required />
-      <label><input type="checkbox" required /> I agree to receive emails.</label>
-      <button type="submit" class="button primary">Join</button>
-     </form>
-     <div class="success">✅ You’re in. Launch alerts coming your way.</div>
-    </div>
-   </section>
-
-   <section class="tools">
-    <div class="container grid">
-     <div class="card">
-      <h3>Transcript Analyzer</h3>
-      <span class="badge live">Live</span>
-      <p>Auto-extract <strong>Actions, Risks, Decisions</strong> from raw meetings in seconds.</p>
-      <div class="card-actions">
-       <a class="button primary" href="/apps.html">Open</a>
-       <a class="button ghost" href="/apps.html">Docs</a>
+        <form class="newsletter-form" method="POST">
+          <input type="email" placeholder="Get product launches + PM tips" required />
+          <label><input type="checkbox" required /> I agree to receive emails.</label>
+          <button type="submit" class="button primary">Join</button>
+        </form>
+        <div class="success">✅ You’re in. Launch alerts coming your way.</div>
       </div>
-     </div>
-     <div class="card">
-      <h3>Status Report Generator</h3>
-      <span class="badge soon">Q4 2025</span>
-      <p>Get <strong>VP-ready summaries</strong> exported as PDF or Markdown in one click.</p>
-      <a class="button ghost" href="/apps.html">Notify Me</a>
-     </div>
-     <div class="card">
-      <h3>Risk Radar</h3>
-      <span class="badge soon">Coming Soon</span>
-      <p>Auto-detect critical project risks — and get <strong>AI-backed mitigation tips</strong>.</p>
-      <a class="button ghost" href="/apps.html">Notify Me</a>
-     </div>
-    </div>
-   </section>
+    </section>
+
+    <section class="tools">
+      <div class="container grid">
+        <div class="card">
+          <h3>Transcript Analyzer</h3>
+          <span class="badge live">Live</span>
+          <p>Auto-extract <strong>Actions, Risks, Decisions</strong> from raw meetings in seconds.</p>
+          <div class="card-actions">
+            <a class="button primary" href="/apps.html">Open</a>
+            <a class="button ghost" href="/apps.html">Docs</a>
+          </div>
+        </div>
+        <div class="card">
+          <h3>Status Report Generator</h3>
+          <span class="badge soon">Q4 2025</span>
+          <p>Get <strong>VP-ready summaries</strong> exported as PDF or Markdown in one click.</p>
+          <a class="button ghost" href="/apps.html">Notify Me</a>
+        </div>
+        <div class="card">
+          <h3>Risk Radar</h3>
+          <span class="badge soon">Coming Soon</span>
+          <p>Auto-detect critical project risks — and get <strong>AI-backed mitigation tips</strong>.</p>
+          <a class="button ghost" href="/apps.html">Notify Me</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer-min">
-   <div class="container footer-container">
-    <div class="foot-left">
-     <img class="logo-icon" src="assets/img/logo.png" alt="System & Flow"/>
-     <span class="brand">System & Flow</span>
-     <span class="divider">•</span>
-     <span class="tagline">Smarter tools. Faster PMs.</span>
+    <div class="container footer-container">
+      <div class="foot-left">
+        <img class="logo-icon" src="assets/img/logo.png" alt="System & Flow" />
+        <span class="brand">System & Flow</span>
+        <span class="divider">•</span>
+        <span class="tagline">Smarter tools. Faster PMs.</span>
+      </div>
+      <div class="foot-right">
+        <a href="https://www.tiktok.com/@systemnflow">TikTok</a>
+        <a href="https://www.instagram.com/systemnflow">Instagram</a>
+        <a href="https://www.pinterest.com/systemnflow">Pinterest</a>
+        <a href="https://www.youtube.com/@Systemnflow">YouTube</a>
+        <a href="https://www.linkedin.com/company/systemnflow">LinkedIn</a>
+        <a href="https://www.facebook.com/systemnflow">Facebook</a>
+      </div>
     </div>
-    <div class="foot-right">
-     <a href="https://www.tiktok.com/@systemnflow">TikTok</a>
-     <a href="https://www.instagram.com/systemnflow">Instagram</a>
-     <a href="https://www.pinterest.com/systemnflow">Pinterest</a>
-     <a href="https://www.youtube.com/@Systemnflow">YouTube</a>
-     <a href="https://www.linkedin.com/company/systemnflow">LinkedIn</a>
-     <a href="https://www.facebook.com/systemnflow">Facebook</a>
+    <div class="legal">
+      © <span id="y"></span> System & Flow™. All rights reserved.
     </div>
-   </div>
-   <div class="legal">
-    © <span id="y"></span> System & Flow™. All rights reserved.
-   </div>
   </footer>
 
   <script>
-   document.getElementById('y').textContent = new D
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
