--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- Header -->
   <header class="site-header">
     <div class="container">
       <a href="/" class="brand-wrap" aria-label="System & Flow">
@@ -24,26 +25,32 @@
     </div>
   </header>
 
+  <!-- Hero -->
   <main>
     <section class="hero">
       <div class="container">
-        <img src="assets/img/logo.png" alt="System & Flow Logo" class="hero-logo" />
+        <img src="assets/img/snf_logo.png" alt="System & Flow Logo" class="hero-logo" />
         <h1>Project Management.<br />Simplified.</h1>
-        <p class="tagline">SaaS tools and AI prompts <strong>built by PMs</strong> to eliminate chaos, flag risks early, and speed up execution.</p>
+        <p class="tagline">
+          SaaS tools and AI prompts <strong>built by PMs</strong> to eliminate chaos, flag risks early, and speed up execution.
+        </p>
         <div class="cta-row">
           <a class="button primary" href="/apps.html">Explore Tools</a>
           <a class="button ghost" href="/contact.html">Early Access List</a>
         </div>
 
-        <form class="newsletter-form" method="POST">
+        <form class="newsletter-form" method="POST" onsubmit="return handleSubscribe(event)">
           <input type="email" placeholder="Get product launches + PM tips" required />
           <label><input type="checkbox" required /> I agree to receive emails.</label>
           <button type="submit" class="button primary">Join</button>
         </form>
-        <div class="success">✅ You’re in. Launch alerts coming your way.</div>
+
+        <!-- Hidden success message until after submit -->
+        <div class="success" style="display: none;">✅ You’re in. Launch alerts coming your way.</div>
       </div>
     </section>
 
+    <!-- Tool Cards -->
     <section class="tools">
       <div class="container grid">
         <div class="card">
@@ -55,12 +62,14 @@
             <a class="button ghost" href="/apps.html">Docs</a>
           </div>
         </div>
+
         <div class="card">
           <h3>Status Report Generator</h3>
           <span class="badge soon">Q4 2025</span>
           <p>Get <strong>VP-ready summaries</strong> exported as PDF or Markdown in one click.</p>
           <a class="button ghost" href="/apps.html">Notify Me</a>
         </div>
+
         <div class="card">
           <h3>Risk Radar</h3>
           <span class="badge soon">Coming Soon</span>
@@ -71,10 +80,11 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer class="footer-min">
     <div class="container footer-container">
       <div class="foot-left">
-        <img class="logo-icon" src="assets/img/logo.png" alt="System & Flow" />
+        <img class="logo-icon" src="assets/img/snf_logo.png" alt="System & Flow" />
         <span class="brand">System & Flow</span>
         <span class="divider">•</span>
         <span class="tagline">Smarter tools. Faster PMs.</span>
@@ -93,8 +103,18 @@
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
+
+    function handleSubscribe(event) {
+      event.preventDefault();
+      const form = event.target;
+      const success = form.nextElementSibling;
+      form.style.display = 'none';
+      success.style.display = 'block';
+      return false;
+    }
   </script>
 </body>
 </html>
