--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="site-header">
     <div class="container">
       <a href="/" class="brand-wrap" aria-label="System & Flow">
-        <img src="assets/img/SNF_logo.png" alt="System & Flow Logo" />
+        <img src="assets/img/logo.png" alt="System & Flow Logo" />
         <span class="brand">System & Flow</span>
       </a>
       <nav>
@@ -29,7 +29,7 @@
   <main>
     <section class="hero">
       <div class="container">
-        <img src="assets/img/SNF_logo.png" alt="System & Flow Logo" class="hero-logo" />
+        <img src="assets/img/snf_logo.png" alt="System & Flow Logo" class="hero-logo" style="width: 180px; max-width: 100%;" />
         <h1>Project Management.<br />Simplified.</h1>
         <p class="tagline">
           SaaS tools and AI prompts <strong>built by PMs</strong> to eliminate chaos, flag risks early, and speed up execution.
@@ -83,7 +83,7 @@
   <footer class="footer-min">
     <div class="container footer-container">
       <div class="foot-left">
-        <img class="logo-icon" src="assets/img/SNF_logo.png" alt="System & Flow" />
+        <img class="logo-icon" src="assets/img/logo.png" alt="System & Flow" />
         <span class="brand">System & Flow</span>
         <span class="divider">•</span>
         <span class="tagline">Smarter tools. Faster PMs.</span>
