--- a/index.html
+++ b/index.html
@@ -49,26 +49,29 @@
           <a class="button ghost" href="/contact.html">Early Access List</a>
         </div>
 
+        <!-- Newsletter Signup Form -->
         <form
-  class="newsletter-form"
-  action="https://formspree.io/f/mzzavvbl"
-  method="POST"
->
-  <input
-    type="email"
-    name="email"
-    placeholder="Enter your email to get launch alerts"
-    required
-  />
-  <label>
-    <input type="checkbox" required />
-    I agree to receive updates and promotional emails.
-  </label>
-  <input type="hidden" name="_redirect" value="https://systemnflow.com/thank-you.html" />
-  <button type="submit" class="button primary">Join</button>
-</form>
-
-        <div class="success" style="display: none;">✅ You’re in. Launch alerts coming your way.</div>
+          class="newsletter-form"
+          action="https://formspree.io/f/mzzavvbl"
+          method="POST"
+        >
+          <input
+            type="email"
+            name="email"
+            placeholder="Enter your email to get launch alerts"
+            required
+          />
+          <label>
+            <input type="checkbox" required />
+            I agree to receive updates and promotional emails.
+          </label>
+          <input
+            type="hidden"
+            name="_redirect"
+            value="https://systemnflow.com/thank-you.html"
+          />
+          <button type="submit" class="button primary">Join</button>
+        </form>
       </div>
     </section>
 
@@ -128,7 +131,8 @@
   </footer>
 
   <!-- Scripts -->
- 
-  <script src="script.js"></script>
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
