--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           <a class="button ghost" href="/contact.html">Early Access List</a>
         </div>
 
-        <!-- Newsletter Signup Form -->
+        <!-- Newsletter Signup Form (Formsubmit Version) -->
         <form
           class="newsletter-form"
-          action="https://formspree.io/f/mzzavvbl"
+          action="https://formsubmit.io/send"
           method="POST"
         >
           <input
@@ -65,11 +65,8 @@
             <input type="checkbox" required />
             I agree to receive updates and promotional emails.
           </label>
-          <input
-            type="hidden"
-            name="_redirect"
-            value="https://systemnflow.com/thank-you.html"
-          />
+          <input type="hidden" name="_redirect" value="https://systemnflow.com/thank-you.html" />
+          <input type="hidden" name="_captcha" value="false" />
           <button type="submit" class="button primary">Join</button>
         </form>
       </div>
