--- a/index.html
+++ b/index.html
@@ -49,26 +49,27 @@
           <a class="button ghost" href="/contact.html">Early Access List</a>
         </div>
 
-        <!-- Newsletter Signup Form (Formsubmit Version) -->
-        <form
-          class="newsletter-form"
-          action="https://formsubmit.io/send"
-          method="POST"
-        >
-          <input
-            type="email"
-            name="email"
-            placeholder="Enter your email to get launch alerts"
-            required
-          />
-          <label>
-            <input type="checkbox" required />
-            I agree to receive updates and promotional emails.
-          </label>
-          <input type="hidden" name="_redirect" value="https://systemnflow.com/thank-you.html" />
-          <input type="hidden" name="_captcha" value="false" />
-          <button type="submit" class="button primary">Join</button>
-        </form>
+       <!-- Newsletter Signup Form (Formsubmit Version) -->
+<form
+  class="newsletter-form"
+  action="https://formsubmit.io/send"
+  method="POST"
+>
+  <input
+    type="email"
+    name="email"
+    placeholder="Enter your email to get launch alerts"
+    required
+  />
+  <label>
+    <input type="checkbox" required />
+    I agree to receive updates and promotional emails.
+  </label>
+  <input type="hidden" name="_redirect" value="https://systemnflow.com/thank-you.html" />
+  <input type="hidden" name="_captcha" value="false" />
+  <input type="hidden" name="_to" value="info@systemnflow.com" />
+  <button type="submit" class="button primary">Join</button>
+</form>
       </div>
     </section>
 
