--- a/thank-you.html
+++ b/thank-you.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Thanks for Joining! | System & Flow</title>
   <link rel="stylesheet" href="styles.css" />
+  
+  <!-- Redirect after 5 seconds -->
+  <meta http-equiv="refresh" content="5;url=/" />
 </head>
 <body>
   <header class="site-header">
