--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <!-- Newsletter Signup Form -->
         <form 
-          action="https://formsubmit.co/info@systemnflow.com" 
+          action="https://formsubmit.co/29418741ca9d5678c6e09e4012d15f59" 
           method="POST" 
           class="newsletter-form"
         >
