--- a/index.html
+++ b/index.html
@@ -51,24 +51,25 @@
 
         <!-- Newsletter Signup Form -->
         <form 
-          action="https://formsubmit.co/29418741ca9d5678c6e09e4012d15f59" 
-          method="POST" 
-          class="newsletter-form"
-        >
-          <input 
-            type="email" 
-            name="email" 
-            placeholder="Enter your email to get launch alerts" 
-            required 
-          />
-          <label>
-            <input type="checkbox" required />
-            I agree to receive updates and promotional emails.
-          </label>
-          <input type="hidden" name="_captcha" value="false" />
-          <input type="hidden" name="_redirect" value="https://systemnflow.com/thank-you.html" />
-          <button type="submit" class="button primary">Join</button>
-        </form>
+  action="https://formsubmit.co/29418741ca9d5678c6e09e4012d15f59" 
+  method="POST"
+  class="newsletter-form"
+>
+  <input 
+    type="email" 
+    name="email" 
+    placeholder="Enter your email to get launch alerts" 
+    required 
+  />
+  <label>
+    <input type="checkbox" required />
+    I agree to receive updates and promotional emails.
+  </label>
+  <input type="hidden" name="_captcha" value="false" />
+  <input type="hidden" name="_next" value="https://systemnflow.com/thank-you.html" />
+  <button type="submit" class="button primary">Join</button>
+</form>
+
       </div>
     </section>
 
