--- a/404.html
+++ b/404.html
@@ -3,22 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <title>Page Not Found | System & Flow</title>
-  <meta name="description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
+  <title>404 | Red-Flag Ronnie Strikes Again</title>
+  <meta name="description" content="Uh-oh. Red-Flag Ronnie pulled the wrong plug again. But you’re still in the right place for fast, focused PM tools." />
   <link rel="canonical" href="https://systemnflow.com/404.html" />
   <meta name="robots" content="noindex,follow" />
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Page Not Found | System & Flow" />
-  <meta property="og:description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
+  <meta property="og:title" content="404 | Red-Flag Ronnie Strikes Again" />
+  <meta property="og:description" content="Uh-oh. Red-Flag Ronnie pulled the wrong plug again. But you’re still in the right place for fast, focused PM tools." />
   <meta property="og:url" content="https://systemnflow.com/404.html" />
   <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Page Not Found | System & Flow" />
-  <meta name="twitter:description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
+  <meta name="twitter:title" content="404 | Red-Flag Ronnie Strikes Again" />
+  <meta name="twitter:description" content="Uh-oh. Red-Flag Ronnie pulled the wrong plug again. But you’re still in the right place for fast, focused PM tools." />
   <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
   <!-- Favicons -->
@@ -36,10 +35,11 @@
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
 
-  <!-- Header -->
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="/"><img src="/assets/img/logo.png" alt="System & Flow logo" /></a>
+      <a class="brand" href="/">
+        <img src="/assets/img/logo.png" alt="System & Flow logo" />
+      </a>
       <nav aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav">Menu</button>
         <ul id="nav" class="nav">
@@ -51,30 +51,28 @@
     </div>
   </header>
 
-  <!-- Main -->
   <main id="main">
     <section class="rfr-hero">
-      <img src="/assets/img/rfr-unplug.png" width="320" height="256" loading="lazy" decoding="async" alt="Ronnie accidentally unplugged the site" />
-      <h1>Red-Flag Ronnie got here first.</h1>
+      <img src="/assets/img/rfr-unplug.png" width="320" height="256" loading="lazy" decoding="async" alt="Red-Flag Ronnie waving a red flag after unplugging something" />
+      <h1>404: Red-Flag Ronnie Unplugged Us.</h1>
       <p class="subtle">
-        The page you’re looking for doesn’t exist (or Ronnie unplugged something he shouldn’t).  
-        You’re still in the right place for PM tools that feel simple.
+        The page you’re looking for is missing—or maybe Ronnie got curious with a cable again.  
+        No worries. You’re still in System & Flow territory.
       </p>
       <div class="rfr-actions">
-        <a href="/" class="button primary">Back to Home</a>
-        <a href="/apps.html" class="button ghost">Explore Tools</a>
+        <a href="/" class="button primary">Return to Homepage</a>
+        <a href="/apps.html" class="button ghost">Browse PM Tools</a>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer class="footer-min">
     <div class="container">
       <div class="foot-left">
         <img class="logo-icon" src="/assets/img/logo.png" alt="System & Flow" />
-        <span class="brand">System &amp; Flow</span>
+        <span class="brand">System & Flow</span>
         <span class="divider">•</span>
-        <span class="tagline">Project management toolkits &amp; AI prompts.</span>
+        <span class="tagline">Smarter tools. Faster PMs.</span>
       </div>
       <div class="foot-right">
         <a href="/">Home</a>
@@ -88,16 +86,15 @@
       </div>
     </div>
     <div class="legal small">
-      © <span id="y"></span> System &amp; Flow™. All rights reserved.
+      © <span id="y"></span> System & Flow™. All rights reserved.
     </div>
   </footer>
 
-  <!-- Scripts -->
   <script>
-    // year
+    // Update year
     document.getElementById('y').textContent = new Date().getFullYear();
 
-    // mobile nav
+    // Mobile nav toggle
     const btn = document.querySelector('.nav-toggle');
     const nav = document.getElementById('nav');
     if (btn && nav) {
